book review oops opening

--- a/history/george_and_orwell_review.html
+++ b/history/george_and_orwell_review.html
@@ -11,10 +11,10 @@
     <p>
         &emsp;This is a review of "George and Orwell: The Fight for Freedom" by Thomas E. Ricks. Going into this assignment, 
         I only know a handful of things about either historical figure. Churhcill was of course the leader of Britain during World War II, and
-        althought not nessciarily unpopular, he lost his reellection following the war. However, that's all I know about him. George Orwell is of course 
-        one of the most famous science fiction writers of all time, probably most famous for War of the Worlds. But again, aside from what he is generally known
-        for, that's really all I personably undestand about him. I chose this particalar book to review because, despite not knowing much about them, I know
-        enough to be very excited to learn more!
+        althought not nessciarily unpopular, he lost his reellection following the war. George Orwell is of course 
+        famous for his social science fiction dystopia "1984" and his political satire "Animal Farm.". Aside from those popularly understood things
+        about these two historical figures, that's all that I know. But, that's why I've chosen this book for review, and I'm very exited to learn
+        the details about these two incredibly influential people.
     </p>
 </body>
 </html>
